--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 autopep8==1.4.4
 beautifulsoup4==4.8.1
+dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==12.0.0
-pkg-resources==0.0.0
+django-heroku==0.3.1
+gunicorn==20.0.4
+Pillow==6.2.1
+psycopg2==2.8.4
 pycodestyle==2.5.0
+python-decouple==3.3
 pytz==2019.3
 soupsieve==1.9.5
+whitenoise==5.0.1
